@@ -820,8 +820,6 @@ abstract class Creator
      * Returns whether the margin scheme may be used.
      *
      * @return bool
-     *
-     * @deprecated Use shop setting marginProducts. Will be removed when no longer used.
      */
     protected function allowMarginScheme()
     {
