@@ -147,12 +147,34 @@ class Creator extends BaseCreator
             $vatInfo = $this->getVatRangeTags($productVat, $productPriceEx, 0.0001, 0.0001);
         }
 
-        $result += array(
+        // Check for cost price.
+        $isMargin = false;
+        $invoiceSettings = $this->config->getInvoiceSettings();
+        if (!empty($invoiceSettings['costPrice'])) {
+            $value = $this->getTokenizedValue($invoiceSettings['costPrice']);
+            if (!empty($value)) {
+                if ($this->allowMarginScheme()) {
+                    // Margin scheme:
+                    // - Do not put VAT on invoice: send price incl VAT as
+                    //   unitprice.
+                    // - But still send the VAT rate to Acumulus.
+                    $isMargin = true;
+                    $result[Tag::UnitPrice] = $productPriceInc;
+                }
+                // If we have a cost price we add it, even if this no margin
+                // invoice.
+                $result [Tag::CostPrice] = $value;
+            }
+        }
+        if (!$isMargin) {
+            $result += array(
                 Tag::UnitPrice => $productPriceEx,
                 Meta::UnitPriceInc => $productPriceInc,
-                Tag::Quantity => $item->product_quantity,
                 Meta::VatAmount => $productVat,
-            ) + $vatInfo;
+            );
+        }
+        $result[Tag::Quantity] = $item->product_quantity;
+        $result += $vatInfo;
 
         // Add variant info.
         $children = $this->getVariantLines($item, $result[Tag::Quantity], $vatInfo);
